@@ -1,5 +1,11 @@
 2020-06-24 Philipp Klaus Krause <pkk AT spth.de>
 
+	* src/z80/peep.c,
+	  src/z80/peeph-gbz80.def:
+	  Support for sp in notUsed for gbz80, patch by Basil Hussain.
+
+2020-06-24 Philipp Klaus Krause <pkk AT spth.de>
+
 	* src/z80/peeph-gbz80.def:
 	  Rename operation in immdInRange rule to prepare for further patches, patch by Baŝto.
 	* src/SDCCpeeph.c:
